--- a/工具类.md
+++ b/工具类.md
@@ -1,8 +1,9 @@
 # 工具类
 
-[AndroidUtilCode 24k](https://github.com/Blankj/AndroidUtilCode)
-
-[Android KTX 7.5k](https://github.com/android/android-ktx)
-
-[anko-appcompat 14k](https://github.com/Kotlin/anko) 只引用anko-appcompat-v7-commons
+[AndroidUtilCode](https://github.com/Blankj/AndroidUtilCode)
+24k
+[Android KTX](https://github.com/android/android-ktx)
+7.5k
+[anko-appcompat](https://github.com/Kotlin/anko)
+14k 只引用anko-appcompat-v7-commons
 
