--- a/多媒体.md
+++ b/多媒体.md
@@ -22,3 +22,10 @@
 
 [MusicDNA](https://github.com/harjot-oberai/MusicDNA)
 2.5k 3年前
+
+## 蓝牙
+[FastBle](https://github.com/Jasonchenlijian/FastBle)
+3.1k 
+
+[RxAndroidBle](https://github.com/Polidea/RxAndroidBle)
+2.3k 
